fix: 修复 xenoamess-s-civilization 模块的 Java 21 和 API 兼容性问题
- 注释 lombok-maven-plugin (与 Java 21 不兼容)
- 设置 java.version=17 避免被 parent pom 的 Java 8 覆盖
- 修复 Person.getAllClans() 使用 collect(Collectors.toList()) 替代 toList()
- 修复 GUI 类 API 变更:
  - initProcessors() 改为 protected
  - update() 返回 boolean
  - 修复 drawTextCenter 颜色参数顺序
  - 注释掉 drawRect/drawCircle (GameWindow 不支持)
  - 修复类型转换问题